another scrollbar issue fix

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -47,6 +47,18 @@ body {
   color: var(--color-text);
   margin: auto;
   font-size: 16px;
+  overflow-x: hidden;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 // fix any overlap issues
@@ -169,11 +181,13 @@ ul {
 }
 
 // a tags appear when in content
-#content p a {
+#content p a,
+#content > blockquote > cite > a {
   color: var(--color-link);
 }
 
-#content p a:hover {
+#content p a:hover,
+#content > blockquote > cite > a:hover {
   color: var(--color-link-hover);
 }
 
